--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Country Information - World Regions</title>
+    <link rel="stylesheet" href="styles.css">
+    <title></title>
 </head>
 <body>
+<h1>World Countries</h1>
+<img src="assets/world_map.png" alt="world-map" height="800" width="1300"/>
+<ul id="country-names"></ul>
 
+<script type="module" src="app.js"></script>
 </body>
 </html>
