--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 <body>
 <h1>World Countries</h1>
 <img src="assets/world_map.png" alt="world-map" height="800" width="1300"/>
+<a href="countrySearch.html">Search the countries</a>
 <ul id="country-names"></ul>
 
 <script type="module" src="app.js"></script>
