--- a/src/countrySearch.html
+++ b/src/countrySearch.html
@@ -9,8 +9,10 @@
 <h1>Let's search some countries!</h1>
 <img src="assets/world-map2.png" width=750 id="world-map"/>
 <form id="search-form">
+
     <input type="text" id="country-field" placeholder="Search country...">
     <button type="submit">Search</button>
+    <i class="fa-solid fa-magnifying-glass"></i>
     <div id="results"></div>
     <div id="error-message"></div>
 
